Terraform_Alura/infra/Security_Group.tf
resource "aws_security_group" "Ec2-prod" {
    name = "acesso_prod"
    description = "grupo de Prod"
  ingress  {
    from_port =0
    to_port =0
    protocol ="-1"
    self = true
  } 

  ingress {
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    cidr_blocks = [ "0.0.0.0/0" ]
  }

  ingress {
    from_port = 8000
    to_port = 8000
    protocol = "tcp"
    cidr_blocks = [ "0.0.0.0/0" ]
    
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = [ "0.0.0.0/0" ]
  }

  egress {
    cidr_blocks = [ "0.0.0.0/0" ]
    from_port = 0
    to_port = 0
    protocol = "-1"
  }

  tags = {
    Name = "acesso_geral"
  }
}
